--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -1,13 +1,19 @@
 <Window x:Class="WindowWalker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:windowWalker="clr-namespace:WindowWalker"
-        Title="MainWindow" Width="1000" MinHeight="10" Height="85" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" SizeToContent="Height" Visibility="{Binding WindowVisibility, Converter={StaticResource boolToVisibleConverter}}">
-
+        Title="MainWindow" Width="1000" MinHeight="10" Height="85" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" SizeToContent="Height">
+    <Window.Style>
+        <Style TargetType="{x:Type Window}">
+            <Setter Property="Visibility" Value="Collapsed"/>
+            <!--<Style.Triggers>
+                <DataTrigger Binding="{Binding WindowVisibility}" Value="True">
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                </DataTrigger>
+            </Style.Triggers>-->
+        </Style>
+    </Window.Style>
     <Window.Resources>
         <ResourceDictionary>
-            <windowWalker:BoolToVisibilityConverter x:Key="boolToVisibleConverter" />
             <VisualBrush x:Key="SettingsBrush" Visual="{StaticResource appbar_settings}"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Icons.xaml" />
